Fixes various BBCode editor visual inconsistencies:
- Ad editor/ auto filter message focus border
- Puller appearance with scrollbar
- Ad editor tag margins

--- a/scss/_bbcode_editor.scss
+++ b/scss/_bbcode_editor.scss
@@ -4,6 +4,7 @@
     &:focus {
       box-shadow: 0 0 0 ($input-btn-focus-width / 2) $input-btn-focus-color;
     }
+    resize: none;
   }
 }
 
